language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_invalid_record_update_2.snap
---
source: language-server/src/tests/hover.rs
expression: "\ntype Wibble {\n  Wibble(a: Int, b: Bool)\n}\n\npub fn go(wibble: Wibble) {\n    Wibble(..wibble, a: True, b: 1)\n}\n"
---
type Wibble {
  Wibble(a: Int, b: Bool)
}

pub fn go(wibble: Wibble) {
    Wibble(..wibble, a: True, b: 1)
                                 ↑ 
}


----- Hover content (markdown) -----
```gleam
Int
```
