language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_label_in_pattern.snap
---
source: language-server/src/tests/hover.rs
expression: "\ntype Wibble {\n  Wibble(wibble: Int, wobble: Int)\n}\n\npub fn main() {\n  let Wibble(wibble: _, wobble: _) = todo\n  todo\n}\n"
---

type Wibble {
  Wibble(wibble: Int, wobble: Int)
}

pub fn main() {
  let Wibble(wibble: _, wobble: _) = todo
             ▔▔▔▔↑▔                      
  todo
}


----- Hover content (markdown) -----
```gleam
Int
```
