language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_module_select_pattern.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport mod\npub fn go(x: mod.Wibble) {\n  case x {\n    mod.Wibble -> 1\n  }\n}\n"
---
import mod
pub fn go(x: mod.Wibble) {
  case x {
    mod.Wibble -> 1
    ▔▔▔▔↑▔▔▔▔▔     
  }
}


----- Hover content (markdown) -----
```gleam
mod.Wibble
```
