language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_nested_constant.snap
---
source: language-server/src/tests/hover.rs
expression: "\ntype Wibble {\n  Wibble\n  Wobble(BitArray)\n}\n\nconst value = #(1, 2, [Wibble, Wobble(<<1, 2, 3>>), Wibble])\n"
---

type Wibble {
  Wibble
  Wobble(BitArray)
}

const value = #(1, 2, [Wibble, Wobble(<<1, 2, 3>>), Wibble])
                                              ↑             


----- Hover content (markdown) -----
```gleam
Int
```
