language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_pattern_in_use.snap
---
source: language-server/src/tests/hover.rs
expression: "\ntype Wibble {\n  Wibble(Int, Float)\n}\n\npub fn main() {\n  use Wibble(int, float) <- todo\n  todo\n}\n"
---

type Wibble {
  Wibble(Int, Float)
}

pub fn main() {
  use Wibble(int, float) <- todo
             ↑▔▔                
  todo
}


----- Hover content (markdown) -----
```gleam
Int
```
